# RoguEngine

./: .gitignore  CHANGELOG  CMakeLists.txt  Doxyfile  README.md  mainpage.cpp  namespacedoc.cpp
game/: gamecore.h  gamecoreexceptions.h
game/auxiliary/: coordinates.h  entityType.h
game/entity/: entity.h  entityPackage.h  monster.h  player.h
game/locations/: dungeon.h  location.h  locationsPackage.h  structure.h  tile.h  world.h
game/pathfinding/: astar.h  basepathfinder.h  linemover.h  pathgenerator.h  randommover.h
game/types/: astargraphnode.h  characteristics.h  coordinates.h  definitions.h  entityType.h  fontSymbolNames.h  fovstatus.h  limitedpair.h  movertype.h  randommovermodel.h  rgbadata.h  typesPackage.h
graphic/: coreexceptions.h  definitions.h  graphiccoreexceptions.h  tileset.h
graphic/renderers/: baserenderer.h  gameobjectrenderer.h  locationrenderer.h
graphic/semiconsole/: scfont.h  semiconsole.h
include/SFML/lib/cmake/SFML/: CPackConfig.cmake  CPackSourceConfig.cmake
